# clips-generator

./: .gitignore  COMFYUI_SETUP.md  README.md  docker-compose.yml
genAudio/: .env.example  .gitignore  README.md  pyproject.toml  rest_api.py  server.py  test_body.json
genAudio/backends/: chatterbox.py
genAudio/scripts/: install_torch_cuda.py
genAudio/shared/: config.py
genAudio/tools/: generate.py
genImages/: .env.example  README.md  pyproject.toml  rest_api.py  server.py
genImages/backends/: comfyui.py
genImages/shared/: config.py  models.py
genImages/tools/: generate.py  info.py
n8n-mcp-service/: .env.example  WEBHOOK_404_AUDIO.md  config.py  create_workflow.py  create_workflow_audio.py  pyproject.toml  run_webhook_generate.ps1  server.py  test_mcp_trigger.py  test_workflow_api.py  test_workflow_audio_api.py  tools_n8n.py  webhook_1080p.json  webhook_payload.json
scripts/: run_comfyui_gpu.ps1  setup_comfyui_gpu.ps1  start_comfyui_and_check.ps1
