[project]
name = "mcp-audio-gen"
version = "0.1.0"
description = "MCP server for text-to-speech via Chatterbox TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "chatterbox-tts>=0.1.6",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
]

[project.scripts]
mcp-audio-gen = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
